src/components/Card/style.css
article {
	display: flex;
	flex-direction: column;
	padding: 30px 20px;
	gap: 10px;
	border-radius: 20px;
	background-color: var(--color-g-black);
}

article > img {
	width: 254px;
	height: 216px;
	object-fit: cover;
	border-radius: 50px;

	border: 2px dashed white;
}

article h3 {
	text-align: center;
	font-size: 20px;
	font-weight: bold;
	color: var(--color-white);
}

.card-description {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.card-line {
	display: flex;
	gap: 10px;
}

.card-line img {
	width: 24px;
	height: 24px;
}

.card-line p {
	font-size: 20px;
	font-weight: normal;
	color: var(--color-white);
}

